--- a/index.html
+++ b/index.html
@@ -5,11 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Spotify Imersão</title>
+
     <link rel="stylesheet" href="./src/styles/reset.css">
     <link rel="stylesheet" href="./src/styles/vars.css">
     <link rel="stylesheet" href="./src/styles/sidebar-footer.css">
     <link rel="stylesheet" href="./src/styles/main-content.css">
-
+    <link rel="stylesheet" href="./src/styles/media-queries.css">
 
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/solid.css"
         integrity="sha384-Tv5i09RULyHKMwX0E8wJUqSOaXlyu3SQxORObAI08iUwIalMmN5L6AvlPX2LMoSE" crossorigin="anonymous" />
@@ -21,29 +22,26 @@
 <body>
     <div class="sidebar">
         <nav class="sidebar__navigation">
-            <div>
-                <div class="logo">
-                    <a href="">
-                        <img src="./src/assets/icons/logo-spotify.png" alt="logo do spotify">
-                    </a>
-                </div>
-                <ul>
-                    <li>
-                        <a href="">
-                            <span class="fa fa-home"></span>
-                            <span>Início</span>
-                        </a>
-                    </li>
-                    <li>
-                        <a href="">
-                            <span class="fa fa-search"></span>
-                            <span>Buscar</span>
-                        </a>
-                    </li>
-                </ul>
+            <div class="logo">
+                <a href="">
+                    <img src="./src/assets/icons/logo-spotify.png" alt="Logo" />
+                </a>
             </div>
+            <ul>
+                <li>
+                    <a href="">
+                        <span class="fa fa-home"></span>
+                        <span>Início</span>
+                    </a>
+                </li>
+                <li>
+                    <a href="">
+                        <span class="fa fa-search"></span>
+                        <span>Buscar</span>
+                    </a>
+                </li>
+            </ul>
         </nav>
-
         <div class="library">
             <div class="library__content">
                 <button class="library__button">
@@ -72,137 +70,122 @@
             </div>
         </div>
     </div>
-
     <main>
         <div class="main-container">
             <nav class="header__navigation">
                 <div class="navigation">
                     <button class="arrow-left">
-                        <img src="./src/assets/icons/small-left.png" alt="seta esquerda">
+                        <img src="./src/assets/icons/small-left.png" alt="" />
                     </button>
                     <button class="arrow-right">
-                        <img src="./src/assets/icons/small-right.png" alt="seta direita">
+                        <img src="./src/assets/icons/small-right.png" alt="" />
                     </button>
                 </div>
                 <div class="header__search">
-                    <img src="./src/assets/icons/search.png" alt="">
-                    <input id="search-input" type="text" maxlength="800" placeholder="O que você quer ouvir?" />
+                    <img src="./src/assets/icons/search.png" alt="" />
+                    <input id="search-input" maxlength="800" autocorrect="off" autocapitalize="off" spellcheck="false"
+                        placeholder="O que você quer ouvir?" value="" />
                 </div>
-
                 <div class="header__login">
                     <button class="subscribe">Inscreva-se</button>
                     <button class="login">Entrar</button>
-
                 </div>
             </nav>
+
             <div class="playlist-container">
-                <div id="result-playlist">
+                <div id="result-playlists">
                     <div class="playlist">
-                        <h1 id="welcome">Boas vindas</h1>
+                        <h1 id="greeting">Boas vindas</h1>
                         <h2 class="session">Navegar por todas as seções</h2>
                     </div>
+
                     <div class="offer__scroll-container">
                         <div class="offer__list">
                             <section class="offer__list-item">
-
                                 <a href="" class="cards">
                                     <div class="cards card1">
                                         <img src="./src/assets/playlist/1.jpeg" alt="" />
                                         <span>Boas festas</span>
                                     </div>
                                 </a>
-
                                 <a href="" class="cards">
                                     <div class="cards card2">
                                         <img src="./src/assets/playlist/2.png" alt="" />
                                         <span>Feitos para você</span>
                                     </div>
                                 </a>
-
                                 <a href="" class="cards">
                                     <div class="cards card3">
                                         <img src="./src/assets/playlist/3.jpeg" alt="" />
                                         <span>Lançamentos</span>
                                     </div>
                                 </a>
-
                                 <a href="" class="cards">
                                     <div class="cards card4">
                                         <img src="./src/assets/playlist/4.jpeg" alt="" />
                                         <span>Creators</span>
                                     </div>
                                 </a>
-
                                 <a href="" class="cards">
                                     <div class="cards card5">
                                         <img src="./src/assets/playlist/5.jpeg" alt="" />
                                         <span>Para treinar</span>
                                     </div>
                                 </a>
-
                                 <a href="" class="cards">
                                     <div class="cards card6">
                                         <img src="./src/assets/playlist/6.jpeg" alt="" />
                                         <span>Podcasts</span>
                                     </div>
                                 </a>
-
                                 <a href="" class="cards">
                                     <div class="cards card7">
                                         <img src="./src/assets/playlist/7.jpeg" alt="" />
                                         <span>Sertanejo</span>
                                     </div>
                                 </a>
-
                                 <a href="" class="cards">
                                     <div class="cards card8">
                                         <img src="./src/assets/playlist/8.jpeg" alt="" />
                                         <span>Samba e pagode</span>
                                     </div>
                                 </a>
-
                                 <a href="" class="cards">
                                     <div class="cards card9">
                                         <img src="./src/assets/playlist/9.jpeg" alt="" />
                                         <span>Funk</span>
                                     </div>
                                 </a>
-
                                 <a href="" class="cards">
                                     <div class="cards card10">
                                         <img src="./src/assets/playlist/10.jpeg" alt="" />
                                         <span>MPB</span>
                                     </div>
                                 </a>
-
                                 <a href="" class="cards">
                                     <div class="cards card11">
                                         <img src="./src/assets/playlist/11.jpeg" alt="" />
                                         <span>Rock</span>
                                     </div>
                                 </a>
-
                                 <a href="" class="cards">
                                     <div class="cards card12">
                                         <img src="./src/assets/playlist/12.jpeg" alt="" />
                                         <span>Hip Hop</span>
                                     </div>
                                 </a>
-
                                 <a href="" class="cards">
                                     <div class="cards card13">
                                         <img src="./src/assets/playlist/13.jpeg" alt="" />
                                         <span>Indie</span>
                                     </div>
                                 </a>
-
                                 <a href="" class="cards">
                                     <div class="cards card14">
                                         <img src="./src/assets/playlist/14.jpeg" alt="" />
                                         <span>Relax</span>
                                     </div>
                                 </a>
-
                                 <a href="" class="cards">
                                     <div class="cards card15">
                                         <img src="./src/assets/playlist/15.jpeg" alt="" />
@@ -247,6 +230,7 @@
             <button type="button">Inscreva-se grátis</button>
         </div>
     </footer>
+    <script src="script.js" type="text/javascript"></script>
 </body>
 
 </html>
